--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "admin-lte": "2.3.11",
+    "jquery": "3.1.1",
+    "intl": "1.2.5",
+    "reflect-metadata": "0.1.9",
+    "ts-helpers": "1.1.2",
+    "font-awesome": "4.7.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
