correção de bugs e atualizações token

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^5.0.0",
     "admin-lte": "2.3.11",
     "angular-material": "^1.1.7",
+    "angular2-text-mask": "^8.0.4",
     "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
+    "ng2-input-mask": "0.0.7",
     "ng2-modal-dialog": "^2.0.5",
     "ng2-toastr": "^4.1.2",
     "reflect-metadata": "0.1.9",
