--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reflect-metadata": "0.1.9",
     "rxjs": "^5.5.2",
     "ts-helpers": "1.1.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
