--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -3,6 +3,7 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "noImplicityAny":false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
